Corrección de vista completo

--- a/_description.scss
+++ b/_description.scss
@@ -9,6 +9,7 @@
     }
     .description{
         font-family:  'Open Sans', sans-serif;
+        padding: 25px 0;
         h1{
             color: white;
             font-size: 35px;
@@ -16,6 +17,7 @@
         p{
             color: rgba(255, 255, 255, 0.747);
             font-size: 16.5px;
+            margin-bottom: 2em;
         }
         button{
             border-radius: 50px;
