Posicion de logo corregida completo

--- a/_logo.scss
+++ b/_logo.scss
@@ -6,7 +6,7 @@
 }
 @media screen and (max-width:850px) {
     .logo-imagen{
-        padding: 0 0 70px;
+        padding: 0 0 7git0px;
         img{
             width: 35%;
         }
