--- a/estilos.css
+++ b/estilos.css
@@ -87,7 +87,7 @@
 
 @media screen and (max-width: 850px) {
   .logo-imagen {
-    padding: 0 0 70px;
+    padding: 0 0 7git0px;
   }
   .logo-imagen img {
     width: 35%;
